--- a/index.html
+++ b/index.html
@@ -29,48 +29,48 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-      <div class="timeBlock row" data-time="9">
+      <!-- time-blocks go here -->
+      <div class="time-block row" data-time="9">
         <div class="hour col-1">9AM</div>
-        <div class="description col-10">Some text here</div>
+        <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="10">
+      <div class="time-block row" data-time="10">
         <div class="hour col-1">10AM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="11">
+      <div class="time-block row" data-time="11">
         <div class="hour col-1">11AM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="12">
+      <div class="time-block row" data-time="12">
         <div class="hour col-1">12PM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="13">
+      <div class="time-block row" data-time="13">
         <div class="hour col-1">1PM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="14">
+      <div class="time-block row" data-time="14">
         <div class="hour col-1">2PM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="15">
+      <div class="time-block row" data-time="15">
         <div class="hour col-1">3PM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="16">
+      <div class="time-block row" data-time="16">
         <div class="hour col-1">4PM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
-      <div class="timeBlock row" data-time="17">
+      <div class="time-block row" data-time="17">
         <div class="hour col-1">5PM</div>
         <div class="description col-10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
@@ -79,7 +79,9 @@
 
     </div>
 
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
