--- a/index.html
+++ b/index.html
@@ -32,47 +32,47 @@
       <!-- time-blocks go here -->
       <div class="time-block row" data-time="9">
         <div class="hour col-1">9AM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="9"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="10">
         <div class="hour col-1">10AM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="10"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="11">
         <div class="hour col-1">11AM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="11"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="12">
         <div class="hour col-1">12PM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="12"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="13">
         <div class="hour col-1">1PM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="13"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="14">
         <div class="hour col-1">2PM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="14"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="15">
         <div class="hour col-1">3PM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="15"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="16">
         <div class="hour col-1">4PM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="16"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
       <div class="time-block row" data-time="17">
         <div class="hour col-1">5PM</div>
-        <div class="description col-10"></div>
+        <div class="description col-10" data-time="17"></div>
         <div class="saveBtn col-1"><i class="fas fa-save fa-2x"></i></div>
       </div>
 
